--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'fabric-loom' version '1.2-SNAPSHOT'
 	id 'maven-publish'
+	id "com.modrinth.minotaur" version "2.+"
 }
 
 version = project.mod_version
@@ -12,6 +13,31 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+
+	maven {
+		name = "Modrinth"
+		url = "https://api.modrinth.com/maven"
+		content {
+			includeGroup "maven.modrinth"
+		}
+	}
+
+	maven { url "https://www.cursemaven.com" }
+
+	maven {
+		url "https://maven.nucleoid.xyz/"
+		name "Nucleoid"
+	}
+
+	maven { url "https://maven.architectury.dev/" }
+
+	maven {
+		url "https://maven.saps.dev/minecraft"
+		content {
+			includeGroup "dev.latvian.mods"
+			includeGroup "dev.ftb.mods"
+		}
+	}
 }
 
 dependencies {
@@ -27,6 +53,14 @@ dependencies {
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
 	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
+
+	modImplementation include("curse.maven:configuration-444699:${project.configuration_version}")
+	modImplementation include("eu.pb4:placeholder-api:${project.placeholder_version}")
+
+//	modImplementation "dev.ftb.mods:ftb-teams-fabric:${project.ftb_teams_version}"
+//	modImplementation "net.luckperms:api:${project.luckperms_version}"
+	modCompileOnly("dev.ftb.mods:ftb-teams-fabric:${project.ftb_teams_version}") { transitive false }
+	modCompileOnly("net.luckperms:api:${project.luckperms_version}") { transitive false }
 }
 
 base {
