--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ org.gradle.parallel=true
 
 # Dependencies
 	fabric_version=0.77.0+1.19.2
+	configuration_version=4104224
+	placeholder_version=2.0.0-pre.1+1.19.2
+	ftb_teams_version=1902.2.14-build.123
+	luckperms_version=5.4
